куча фиксов: 1. рефакторинг классов папки retrofit 2. перенес обработчик нажатия newsviewholder из адаптера во фрагмент 3. удаление всех кроме трех новостей при открытии приложения 4. Обработка отсутствия интернета 5. Swipe to refresh 6. остальные мелочи типа импоротов и строковых литералов